@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: tk.decls,v 1.24 2002/08/31 06:12:19 das Exp $
+# RCS: @(#) $Id: tk.decls,v 1.24.2.1 2006/02/09 19:09:43 das Exp $
 
 library tk
 
@@ -1364,7 +1364,7 @@ declare 5 aqua {
 }
 
 declare 6 aqua {
-    void TkMacOSXInvalClipRgns (TkWindow *winPtr)
+    void TkMacOSXInvalClipRgns (Tk_Window tkwin)
 }
 
 declare 7 aqua {
